// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action-view can mount ActionView 1`] = `
<div class="SharpActionView">
	<notifications-stub group="" width="300" reverse="true" position="top right" classes="vue-notification" animationtype="css" animation="[object Object]" animationname="slideRight" speed="300" cooldown="0" duration="3000" delay="0" max="Infinity" closeonclick="true"
	    style="top: 6rem;"></notifications-stub>
	<loadingoverlay-stub></loadingoverlay-stub>
</div>
`;

exports[`action-view can mount ActionView with error page 1`] = `
<div class="SharpActionView">
	<div class="container">
		<h1>Error 404</h1>
		<p>ERROR MESSAGE</p>
	</div>
	<loadingoverlay-stub></loadingoverlay-stub>
</div>
`;

exports[`action-view can mount ActionView with notification 1`] = `
<div class="SharpActionView">
	<notifications-stub group="" width="300" reverse="true" position="top right" classes="vue-notification" animationtype="css" animation="[object Object]" animationname="slideRight" speed="300" cooldown="0" duration="3000" delay="0" max="Infinity" closeonclick="true"
	    style="top: 6rem;"></notifications-stub>
	<loadingoverlay-stub></loadingoverlay-stub>
</div>
`;

exports[`action-view can mount with multiple modals 1`] = `
<div class="SharpActionView">
	<notifications-stub group="" width="300" reverse="true" position="top right" classes="vue-notification" animationtype="css" animation="[object Object]" animationname="slideRight" speed="300" cooldown="0" duration="3000" delay="0" max="Infinity" closeonclick="true"
	    style="top: 6rem;"></notifications-stub>
	<modal-stub visible="true" okonly="true" nocloseonbackdrop="true" nocloseonesc="true">
		Modal 1
	</modal-stub>
	<modal-stub visible="true">
		Modal 2
	</modal-stub>
	<loadingoverlay-stub></loadingoverlay-stub>
</div>
`;

exports[`action-view loading 1`] = `
<div class="SharpActionView">
	<notifications-stub group="" width="300" reverse="true" position="top right" classes="vue-notification" animationtype="css" animation="[object Object]" animationname="slideRight" speed="300" cooldown="0" duration="3000" delay="0" max="Infinity" closeonclick="true"
	    style="top: 6rem;"></notifications-stub>
	<modal-stub visible="true" okonly="true" nocloseonbackdrop="true" nocloseonesc="true">
		Modal 1
	</modal-stub>
	<modal-stub visible="true">
		Modal 2
	</modal-stub>
	<loadingoverlay-stub visible="true"></loadingoverlay-stub>
</div>
`;
